--- a/src/main/resources/templates/editar-autor.html
+++ b/src/main/resources/templates/editar-autor.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-	<!--<html
+	<html
 		xmlns:th="http://www.thymeleaf.org"
 		xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	></html>-->
+	></html>
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
