--- a/src/main/resources/templates/editar-autor.html
+++ b/src/main/resources/templates/editar-autor.html
@@ -8,7 +8,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Registro Autor</title>
+		<title>Modificación de autor</title>
 		<!--CSS-->
 		<link rel="stylesheet" href="/css/style.css" />
 		<!--Bootstrap-->
@@ -21,12 +21,12 @@
 	</head>
 	<body>
 		<div class="container m-8">
-			<h1>Registro de autores</h1>
-			<form action="/autores/registro" method="POST">
+			<h1>Modificar autor</h1>
+			<form th:action="@{/autores/editar/{id}(id=${autor.id})}" method="POST">
 				<div class="form-group">
-					<label>Nombre</label> <input type="text" class="form-control" name="nombre" placeholder="Nombre del autor" required>
+					<label>Nombre</label> <input type="text" class="form-control" name="nombre" th:value="${autor.nombre}" required>
 				</div>
-				<input class="btn btn-secondary btn-lg" type="submit" value="Registrar">
+				<input class="btn btn-secondary btn-lg" type="submit" value="Editar">
 			</form>
 		</div>
 		<div class="link-btn">
