--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
 		<br>
 		<br>
 		<div class="link-btn">
-			<a class="btn btn-outline-dark" href="#" role="button" >Libros</a>
+			<a class="btn btn-outline-dark" href="/libros" role="button" >Libros</a>
 			<a class="btn btn-outline-dark" href="/autores" role="button" >Autores</a>
 			<a class="btn btn-outline-dark" href="/editoriales" role="button" >Editoriales</a>
 		</div>
