--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,22 +21,40 @@
 		
 	</head>
 	<body>
-		<div class="container m-8">
-			<h1>Sistema de Libreria</h1>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item active">
+					  <a class="nav-link" href="/">Inicio</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/libros">Libros</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/autores">Autores</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/editoriales">Editoriales</a>
+					</li>
+				  </ul>
+				</div>
+			</nav>
+			<h1 class="p-3">Sistema de Libreria</h1>
+		</header>
+		<div class="container">
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 		</div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<div class="link-btn">
-			<a class="btn btn-outline-dark" href="/libros" role="button" >Libros</a>
-			<a class="btn btn-outline-dark" href="/autores" role="button" >Autores</a>
-			<a class="btn btn-outline-dark" href="/editoriales" role="button" >Editoriales</a>
-		</div>
+		
+		<footer>
+		</footer>	
 	</body>
 </html>
