--- a/src/main/resources/templates/Autor/lista-autor.html
+++ b/src/main/resources/templates/Autor/lista-autor.html
@@ -22,41 +22,65 @@
 		<script src="https://kit.fontawesome.com/f67994367c.js" crossorigin="anonymous"></script>
 	</head> 
 	<body>
-		<div class="container m-8">
-			<h1>Lista de Autores</h1>
-			<table class="table table-dark table-hover table-bordered">
-				<thead> <!--Encabezado de tabla-->
-					<tr class="h5"> <!--Fila-->
-						<th scope="col" class="fila">Nombre</th> <!--Celda de cabeceza-->
-						<th scope="col" class="fila">Alta/Baja</th>
-						<th scope="col" class="fila">Editar</th>
-						<th scope="col" class="fila">Eliminar</th>
-					</tr>
-				</thead> 
-				<tbody th:each="autor : ${autores}"> <!--Cuerpo de tabla-->
-					<tr>
-						<td th:text="${autor.nombre}"></td>
-						<td class="fila">
-							<a th:href="@{/autores/alta/{id}(id=${autor.id})}">
-								<i th:if="${autor.alta}" class="fas fa-arrow-up alta"></i>
-								<i th:unless="${autor.alta}" class="fas fa-arrow-up link-emotic"></i>
-							</a>
-							<a th:href="@{/autores/baja/{id}(id=${autor.id})}">
-								<i th:if="${autor.alta}" class="fas fa-arrow-down link-emotic"></i>
-								<i th:unless="${autor.alta}" class="fas fa-arrow-down baja"></i>
-							</a>
-						</td>
-						<td class="fila"><a th:href="@{/autores/editar/{id}(id=${autor.id})}"><i class="fas fa-edit link-emotic"></i></a></td>
-						<td class="fila">
-							<a th:href="@{/autores/eliminar/{id}(id=${autor.id})}"><i class="fas fa-trash link-emotic"></i></a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item active">
+					  <a class="nav-link" href="/">Inicio</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/libros">Libros</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/autores">Autores</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/editoriales">Editoriales</a>
+					</li>
+				  </ul>
+				</div>
+			</nav>
+			<h1 class="p-3">Lista de Autores</h1>
+		</header>
+		<div class="container">
+			<div class="col-md-12">
+				<table class="table table-dark table-hover table-bordered">
+					<thead> <!--Encabezado de tabla-->
+						<tr class="h5"> <!--Fila-->
+							<th scope="col" class="fila">Nombre</th> <!--Celda de cabeceza-->
+							<th scope="col" class="fila">Alta/Baja</th>
+							<th scope="col" class="fila">Editar</th>
+							<th scope="col" class="fila">Eliminar</th>
+						</tr>
+					</thead> 
+					<tbody th:each="autor : ${autores}"> <!--Cuerpo de tabla-->
+						<tr>
+							<td th:text="${autor.nombre}"></td>
+							<td class="fila">
+								<a th:href="@{/autores/alta/{id}(id=${autor.id})}">
+									<i th:if="${autor.alta}" class="fas fa-arrow-up alta"></i>
+									<i th:unless="${autor.alta}" class="fas fa-arrow-up link-emotic"></i>
+								</a>
+								<a th:href="@{/autores/baja/{id}(id=${autor.id})}">
+									<i th:if="${autor.alta}" class="fas fa-arrow-down link-emotic"></i>
+									<i th:unless="${autor.alta}" class="fas fa-arrow-down baja"></i>
+								</a>
+							</td>
+							<td class="fila"><a th:href="@{/autores/editar/{id}(id=${autor.id})}"><i class="fas fa-edit link-emotic"></i></a></td>
+							<td class="fila">
+								<a th:href="@{/autores/eliminar/{id}(id=${autor.id})}"><i class="fas fa-trash link-emotic"></i></a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="col-md-12 link-btn">
+				<a class="btn btn-outline-dark" href="/autores/registro" role="button" >Registro de autores</a>
+			</div>
 		</div>
-		<div class="link-btn">
-			<a class="btn btn-outline-dark" href="/" role="button" >Inicio</a>
-			<a class="btn btn-outline-dark" href="/autores/registro" role="button" >Registro de autores</a>
-		</div>
+
+		<footer>
+		</footer>
 	</body>
 </html>
