--- a/src/main/resources/templates/Autor/registro-autor.html
+++ b/src/main/resources/templates/Autor/registro-autor.html
@@ -20,9 +20,29 @@
 		/>
 	</head>
 	<body>
-		<div class="container m-8">
-			<h1>Registro de autores</h1>
-			<div>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item active">
+					  <a class="nav-link" href="/">Inicio</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/libros">Libros</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/autores">Autores</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/editoriales">Editoriales</a>
+					</li>
+				  </ul>
+				</div>
+			</nav>
+			<h1 class="p-3">Registro de Autores</h1>
+		</header>
+		<div class="container">
+			<div class="col-md-12">
 				<form th:action="@{/autores/registro}" method="POST">
 					<div class="form-group">
 						<label>Nombre</label> <input type="text" class="form-control" name="nombre" placeholder="Nombre del autor" required>
@@ -36,13 +56,10 @@
 					</div>
 					<input class="btn btn-secondary btn-lg" type="submit" value="Registrar">
 				</form>
-			</div>
-			
-		</div>
-		<div class="link-btn">
-				<a class="btn btn-outline-dark" href="/" role="button" >Inicio</a>
-				<a class="btn btn-outline-dark" href="/autores" role="button" >Listado de autores</a>	
-		</div>
-		
+			</div>	
+		</div>	
+		<footer>
+
+		</footer>	
 	</body>
 </html>
