--- a/src/main/resources/templates/Editorial/editar-editorial.html
+++ b/src/main/resources/templates/Editorial/editar-editorial.html
@@ -20,25 +20,45 @@
 		/>
 	</head>
 	<body>
-		<div class="container m-8">
-			<h1>Modificar editorial</h1>
-			<form th:action="@{/editoriales/editar/{id}(id=${editorial.id})}" method="POST">
-				<div class="form-group">
-					<label>Nombre</label> <input type="text" class="form-control" name="nombre" th:value="${autor.nombre}" required>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item active">
+					  <a class="nav-link" href="/">Inicio</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/libros">Libros</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/autores">Autores</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/editoriales">Editoriales</a>
+					</li>
+				  </ul>
 				</div>
-				<div th:if="${error}!=null" class="error">
-					<p th:text="${error}"></p>
-				</div>
-				<div th:if="${exito}!=null" class="error">
-					<p th:text="${exito}"></p>
-				</div>
-				<input class="btn btn-secondary btn-lg" type="submit" value="Editar">
-			</form>
-		</div>
-		<div class="link-btn">
-				<a class="btn btn-outline-dark" href="/" role="button" >Inicio</a>
-				<a class="btn btn-outline-dark" href="/editoriales" role="button" >Listado de editoriales</a>	
+			</nav>
+			<h1 class="p-3">Modificar Editorial</h1>
+		</header>
+
+		<div class="container">
+			<div class="col-md-12">
+				<form th:action="@{/editoriales/editar/{id}(id=${editorial.id})}" method="POST">
+					<div class="form-group">
+						<label>Nombre</label> <input type="text" class="form-control" name="nombre" th:value="${editorial.nombre}" required>
+					</div>
+					<div th:if="${error}!=null" class="error">
+						<p th:text="${error}"></p>
+					</div>
+					<div th:if="${exito}!=null" class="error">
+						<p th:text="${exito}"></p>
+					</div>
+					<input class="btn btn-secondary btn-lg" type="submit" value="Editar">
+				</form>
+			</div>	
 		</div>
 		
+		<footer></footer>
 	</body>
 </html>
